--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "default-passive-events": "^2.0.0",
     "element-plus": "^2.0.4",
     "vue": "^3.2.25"
   },
