--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "dependencies": {
     "default-passive-events": "^2.0.0",
     "element-plus": "^2.0.4",
+    "sass": "^1.49.9",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
     "@vitejs/plugin-vue": "^2.0.0",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
