--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "default-passive-events": "^2.0.0",
     "element-plus": "^2.0.4",
     "sass": "^1.49.9",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
