--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cv_components_v3": "^0.0.1",
     "default-passive-events": "^2.0.0",
     "element-plus": "^2.0.4",
+    "jquery": "^3.6.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript": "^1.0.1",
