--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@vue/cli-service": "^5.0.4",
-    "cv_amapv3": "^0.0.27",
-    "cv_components_v3": "^0.0.1",
+    "cv_components_v3": "^0.0.5",
     "default-passive-events": "^2.0.0",
     "element-plus": "^2.0.4",
     "jquery": "^3.6.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript": "^1.0.1",
