--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@vue/cli-service": "^5.0.4",
-    "cv_components_v3": "^0.0.5",
     "default-passive-events": "^2.0.0",
     "element-plus": "^2.0.4",
     "jquery": "^3.6.0",
@@ -24,7 +23,8 @@
     "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.49.9",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
