--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cv_components_v3",
-  "version": "0.0.12",
+  "version": "0.0.15",
   "author": "monstergao",
   "scripts": {
     "dev": "vite"
@@ -21,5 +21,5 @@
     "lib",
     "README.md"
   ],
-  "main": "index.ts"
+  "main": "index"
 }
